[package]
name = "valuation-calculator"
version = "0.1.0"
edition = "2021"
authors = ["FinTekkers"]
license = "Apache-2.0"
description = "Bond valuation calculator: pricing, yield, duration, convexity, DV01"

# Zero external dependencies for now. Uses internal date type.
# chrono and rust_decimal will be added when integrating with ledger-models.
[dependencies]
